letter spacing fixed

--- a/mQueries.css
+++ b/mQueries.css
@@ -54,7 +54,6 @@
 @media only screen and (max-width: 820px) {
     .header h1 {
         padding: 0 0 70px 0;
-        letter-spacing: 0.05rem;
         font-weight: 300;
     }
 
